# sentinel-timelog-jira

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  calendar.rs  commands.rs  github.rs  gitscan.rs  jira.rs  lib.rs  logged.rs  main.rs  oauth.rs  settings.rs  state.rs  streak.rs  tray.rs  winstate.rs
ui/: index.html  main.js  styles.css
