[package]
name = "timelog"
version = "0.1.0"
description = "Minimal Jira time logger in the tray/menubar"
edition = "2021"

[lib]
name = "timelog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["time", "sync", "macros"] }
regex = "1"
window-vibrancy = "0.6"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
