[package]
name = "timelog"
version = "0.1.0"
description = "Minimal Jira time logger in the tray/menubar"
edition = "2021"

[lib]
name = "timelog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["time", "sync", "macros", "process", "io-util"] }
futures = { version = "0.3", default-features = false }
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Keep the debug `target/` from ballooning (it was ~17GB from full debuginfo on
# the whole Tauri/windows dep tree). We only ever step through our own code:
[profile.dev]
# file:line in backtraces/panics, but no heavy type debuginfo → far smaller PDBs
debug = "line-tables-only"

[profile.dev.package."*"]
# dependencies carry no debuginfo at all (the windows/tauri crates were the bulk)
debug = false
